news wrap fixed

--- a/css-next/news.css
+++ b/css-next/news.css
@@ -70,7 +70,7 @@
     margin: 5px;
     background: rgba(90, 90, 90, 0.1);
     display: flex;
-    flex-flow: row;
+    flex-flow: row wrap;
     padding: 10px;
 }
 
